# 0.00.78 (54820) Aug 3, 2011
Micro tab: Dissolve particles from the edges instead of the center of the crystal
Micro tab: Maintain constituent ratio according to chemical formula during dissolve
# 0.00.77 (54806) Aug 3, 2011
Water tab: added more proguard keep statements
Water tab: Fixed: Sucrose 3D stick view is broken and there are many exceptions
# 0.00.76 (54799) Aug 3, 2011
Water tab: Fixed: Sucrose 3D view no longer appears
# 0.00.75 (54796) Aug 3, 2011
Micro tab: Sometimes create new crystals instead of only growing one large crystal
Micro tab: Fixed: Ethanol concentration should only count ethanol in solution, not ethanol in the air
Micro tab: Improved speed at which particles move to the drain faucet
Fixed: Exception on startup "multiple clocks are running"
Micro tab: Fixed: "Remove sucrose" button doesn't remove sucrose crystals
# 0.00.74 (54730) Aug 1, 2011
Micro tab: Allow solutes to flow out as long as water is flowing out, moving the target drain point down below the center as the fluid drains
Micro tab: Disabled drain debug rectangles
Micro tab: Fixed draining rate and scheduling for all solute types
Micro tab: Added draining for other particle types
Micro tab: Generalized code for flowing toward the drain at constant concentration for reuse by other solutes
Micro tab: Added FlowOutOfDrainStrategy for particles flowing out of the drain faucet
Micro tab: Added FlowToDrainStrategy for moving particles to the drain at a constant rate
Micro tab: Added crystal update strategies to newly formed crystals
Micro tab: Initial progress towards strategy pattern for motion
# 0.00.73 (54684) Jul 31, 2011
Micro tab: Made sodium ion particles flow toward drain faucet at an even rate
Micro tab: Made it so that components flow out through the drain faucet
Micro tab: Fixed: Sometimes when water too low, drawing errors occur, like NaN or Infinity
Micro tab: Water flows toward the drain